--- a/css/primary-navigation.scss
+++ b/css/primary-navigation.scss
@@ -173,6 +173,7 @@
             a {
               display: block;
               position: relative;
+              white-space: normal;  
                 &:hover, &:focus {
                   background: $offWhite;
                   color: $navItemColor;
